@@ -4,6 +4,8 @@
 	casts for NetNotifyFunc.
 	* server/admin.c, common/network.c, common/network.h: Revert of the
 	change on 2012-04-03, now the admin interface works again.
+	* server/turn.c, server/admin.c, server/admin.h, server/main.c: The
+	admin interface uses the current game. Cleanup of private functions.
 
 2013-02-12  Roland Clobus <rclobus@rclobus.nl>
 	* editor/gtk/editor.c: Better logic for the +/- buttons for columns
